<resources>
    <string name="app_name">BaiduMusic</string>
    <string name="baidumusiclistener">百度音乐 听到极致</string>
    <string name="t_ara">T-ara</string>
    <string name="scene">scene</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="title">title</string>
    <string name="author">author</string>
    <string name="_00_00">00:00</string>
    <string name="playlist">正在播放列表</string>
    <string name="allclear">全部清空</string>
    <string name="shutdown">关闭</string>
    <string name="heart">喜欢</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="addto">添加到</string>
    <string name="unkown">未知</string>
    <string name="mylikemusic">我喜欢的单曲</string>
    <string name="countsong">0首</string>
    <string name="hotauthor">热门歌手</string>
    <string name="more">更多</string>
    <string name="cn_man_author">华语男歌手</string>
    <string name="cn_wo_author">华语女歌手</string>
    <string name="cn_group">华语组合</string>
    <string name="eu_man_author">欧美男歌手</string>
    <string name="eu_wo_author">欧美女歌手</string>
    <string name="eu_group">欧美组合</string>
    <string name="kr_man_author">韩国男歌手</string>
    <string name="kr_wo_author">韩国女歌手</string>
    <string name="kr_group">韩国组合</string>
    <string name="jp_man_author">日本男歌手</string>
    <string name="jp_wo_author">日本女歌手</string>
    <string name="jp_group">日本组合</string>
    <string name="other_author">其他歌手</string>
    <string name="lately_playlist">最近播放</string>
    <string name="radom_play">随机播放</string>
    <string name="all_down">批量下载</string>
    <string name="all_manage">批量管理</string>
    <string name="more_radio">更多电台分类</string>
    <string name="song_recommend">歌单推荐</string>
    <string name="hint_user">请输入账号</string>
    <string name="hint_pw">请输入密码</string>
    <string name="now_login">立即登录</string>
    <string name="register_acc">注册账号</string>
    <string name="folder">文件夹</string>
    <string name="local_music">本地音乐</string>
    <string name="count_song">0首</string>
    <string name="count2_songlist">共2首</string>
    <string name="download_manage">下载管理</string>
    <string name="myk">我的K歌</string>
    <string name="count_2songlist">1首</string>
    <string name="store_list">收藏歌单</string>
    <string name="hreat_songlist">我收藏的单曲</string>
    <string name="my_songlist">我的歌单</string>
    <string name="album">专辑</string>
    <string name="now_playlist">正在播放列表</string>
    <string name="all_clear">全部清空</string>
    <string name="welcome">欢迎</string>
    <string name="logout">退出登录</string>
    <string name="hint_search">歌曲,歌手,专辑,歌词,伴奏</string>
    <string name="details">详情</string>
    <string name="country">country</string>
    <string name="all_music">全部音乐</string>
    <string name="songlist_count">1123321</string>
    <string name="songlist_heart">413</string>
    <string name="radio_details">70年代</string>
    <string name="time_fromate">00:00</string>
    <string name="loading">正在加载</string>
    <string name="recommend_name">新歌榜</string>
    <string name="authorname">authorname</string>
    <string name="authorrul1">authorurl1</string>
    <string name="authorrul2">authorurl2</string>
    <string name="tinguid">tinguid</string>
    <string name="imgurl">imgurl</string>
    <string name="add_to_heart">已添加到我喜欢的音乐</string>
    <string name="del_heart">已取消喜欢的音乐</string>
    <string name="m_jd_com">http://m.jd.com</string>
    <string name="user">user</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="welcome_login">"欢迎 "</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="user_register">user</string>
    <string name="url">url</string>
    <string name="net_error">网络有问题</string>
    <string name="load_complete">加载完毕</string>
    <string name="www_yinyuetai">http://www.yinyuetai.com/video/</string>
    <string name="www_yinyuetai_url">http://www.yinyuetai.com/mv/video-url/</string>
    <string name="radioplay_url">url</string>
    <string name="sceneid">sceneid</string>
    <string name="scenename">sceneName</string>
    <string name="rankdetails_url">url</string>
    <string name="count">count</string>
    <string name="songmenu_loadecomplete">加载完毕</string>
    <string name="listid">listid</string>
    <string name="total">共</string>
    <string name="song">首</string>
    <string name="download_complete">已下载</string>
    <string name="songposition">songposition</string>
    <string name="del_song">删除歌曲</string>
    <string name="del_conofirm">确定删除?</string>
    <string name="confirm">确定</string>
    <string name="del_success">删除成功</string>
    <string name="del_cancel">取消删除</string>
    <string name="downloadutils_songurl">/music/mp3/</string>
    <string name="download_mp3">.mp3</string>
    <string name="download_lrc">/music/lrc/</string>
    <string name="download_lrc_street">.lrc</string>
    <string name="repeat_download">重复下载</string>
    <string name="download_now">开始下载</string>
    <string name="show_share">分享</string>
    <string name="sharesdk_cn">http://sharesdk.cn</string>
    <string name="showshare_imageurl">http://f1.sharesdk.cn/imgs/2014/02/26/owWpLZo_638x960.jpg</string>
    <string name="showshare_share_text">我是分享文本</string>
    <string name="showshare_text">我是测试评论文本</string>
    <string name="shwoshare_qq">qq</string>
    <string name="position">position</string>
    <string name="mode">mode</string>
    <string name="mm_ss">mm:ss</string>
    <string name="loop_play">循环播放</string>
    <string name="random_play">随机播放</string>
    <string name="one_play">单曲循环</string>
    <string name="search_lrc">正在搜索歌词</string>
    <string name="no_lrc">暂无歌词</string>
    <string name="http">http</string>
    <string name="music_lrc">/music/lrc/</string>
    <string name="lrcview_lrc">.lrc</string>
    <string name="unknown">未知</string>
    <string name="unknown_equals"><![CDATA[<unknown>]]></string>
    <string name="double_quit">再按一次后退键退出程序</string>
    <string name="main_tinguid">tinguid</string>
    <string name="main_author">author</string>
    <string name="main_country">country</string>
    <string name="main_imgurl">imgurl</string>
    <string name="main_authorurl1">authorurl1</string>
    <string name="main_author2">authorurl2</string>
    <string name="main_authorname">authorname</string>
    <string name="main_count">count</string>
    <string name="main_url">url</string>
    <string name="main_listid">listid</string>
    <string name="back">返回</string>
    <string name="liteorm_songurl">songurl</string>
</resources>
