<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_marginTop="@dimen/tendp"
        android:background="@drawable/shape"
        android:hint="@string/hint_user"
        android:layout_width="@dimen/two_zero_zero_dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_login_pw"
        android:id="@+id/et_login_id" />
    <EditText
        android:inputType="textPassword"
        android:background="@drawable/shape"
        android:hint="@string/hint_pw"
        android:layout_width="@dimen/two_zero_zero_dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_login_pw"
        android:layout_below="@+id/et_login_id"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="@drawable/shape_loginbtn"
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/three_zero_dp"
        android:text="@string/now_login"
        android:layout_below="@+id/et_login_pw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/one_eight_dp" />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_acc"
        android:layout_alignBottom="@+id/btn_login_login"
        android:layout_toEndOf="@+id/et_login_pw" />
</RelativeLayout>