<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/songplaylistpage"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_songplaypage_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/bt_playpage_button_return_press" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:layout_width="@dimen/one_dp"
            android:layout_height="@dimen/two_zero_dp"
            android:layout_alignBottom="@+id/iv_songplaypage_tvbtn"
            android:layout_marginEnd="@dimen/one_eight_dp"
            android:layout_toStartOf="@+id/iv_songplaypage_tvbtn"
            android:background="@android:color/background_dark" />

        <ImageView
            android:id="@+id/iv_songplaypage_tvbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/songplayactivity_title"
            android:layout_marginEnd="@dimen/two_three_dp"
            android:src="@mipmap/bt_sceneplay_word_press" />

        <TextView
            android:id="@+id/songplayactivity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/linearLayout3"
            android:layout_marginStart="@dimen/two_seven_dp"
            android:layout_toEndOf="@+id/linearLayout3"
            android:text="@string/title"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/songplayactivity_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/songplayactivity_title"
            android:layout_below="@+id/songplayactivity_title"
            android:text="@string/author"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/songplaypage_viewpager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_nine_two_dp">

    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.06">

        <ImageView
            android:id="@+id/iv_songplaypage_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/six_one_dp"
            android:src="@mipmap/bt_sceneplay_down_press" />

        <ImageView
            android:id="@+id/iv_songplaypage_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/bt_sceneplay_collect_press" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/five_five_dp"
            android:src="@mipmap/bt_playpage_moreactions_normal"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekbar_songplaypage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:maxHeight="@dimen/four_dip"
        android:minHeight="@dimen/four_dip"
        android:paddingLeft="@dimen/five_zero_dip"
        android:paddingRight="@dimen/five_zero_dip"
        android:progressDrawable="@drawable/progress_seekbar"
        android:thumb="@drawable/truk"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_one_four_dp">
        <TextView
            android:id="@+id/tv_songplaypage_time"
            android:textColor="@android:color/white"
            android:text="@string/_00_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_songplaypage_maxtime"
            android:textColor="@android:color/white"
            android:text="@string/_00_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:src="@drawable/play_mode_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_songplaypage_playmode"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/two_three_dp" />

        <ImageView
            android:src="@mipmap/bt_widget_prev_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four_six_dp"
            android:id="@+id/iv_songplayactivity_previous"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_songplayactivity_play" />

        <ImageView
            android:src="@mipmap/bt_widget_pause_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_songplayactivity_play"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:src="@mipmap/bt_widget_next_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_songplayactivity_next"
            android:layout_marginStart="@dimen/four_zero_dp"
            android:layout_alignTop="@+id/iv_songplayactivity_previous"
            android:layout_toEndOf="@+id/iv_songplayactivity_play" />
        <ImageView
            android:id="@+id/iv_songplaypage_more"
            android:src="@mipmap/bt_playpage_button_more_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_songplayactivity_play"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/two_zero_dp" />
    </RelativeLayout>
</LinearLayout>